adição quarta noticia

--- a/scr/blog.html
+++ b/scr/blog.html
@@ -51,6 +51,13 @@
                 <p><em>Por: Ugo Roveda</em></p>
                 <span><a href="https://kenzie.com.br/blog/o-que-e-python/">Ler mais</a></span>
             </article>
+
+            <article>
+                <h3><strong>O QUE SÃO FRAMEWORKS E POR QUE SÃO IMPORTANTES PARA OS DEVS</strong></h3>
+                <p>Um framework é uma estrutura que serve de base para a construção de aplicações web de finalidade específica<br> cujo desenvolvimento pode ser muito custoso e/ou problemático.</p>
+                <p><em>Por: Daniel Kriger</em></p>
+                <span><a href="https://kenzie.com.br/blog/framework/">Ler mais</a></span>
+            </article>
     
         </section>
 
